# special

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  assoc_laguerre.cpp  assoc_laguerref.cpp  assoc_legendre.cpp  assoc_legendref.cpp  beta.cpp  betaf.cpp  comp_ellint1.cpp  comp_ellint1f.cpp  comp_ellint2.cpp  comp_ellint2f.cpp  comp_ellint3.cpp  comp_ellint3f.cpp  cyl_bessel_i.cpp  cyl_bessel_if.cpp  cyl_bessel_j.cpp  cyl_bessel_jf.cpp  cyl_bessel_k.cpp  cyl_bessel_kf.cpp  cyl_neumann.cpp  cyl_neumannf.cpp  derp.cpp  ellint1.cpp  ellint1f.cpp  ellint2.cpp  ellint2f.cpp  ellint3.cpp  ellint3f.cpp  expint.cpp  expintf.cpp  gen_hypot_data.cpp  hermite.cpp  hermitef.cpp  hypot3.cpp  hypot3f.cpp  hypot_high_data.ipp  (+24 more)
include/: xspecial_math.h
